--- a/app/src/main/res/layout/item_work_func.xml
+++ b/app/src/main/res/layout/item_work_func.xml
@@ -1,25 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@drawable/border_bg"
-              android:gravity="center"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="70dp"
+    android:background="@drawable/border_bg">
+    <View
+        android:id="@+id/my_line_top"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_10"
+        android:background="@color/whitesmoke"
+        android:visibility="gone"
+        android:layout_alignParentTop="true" />
+    <TextView
+        android:id="@+id/function_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="18dp"
+        android:layout_marginStart="18dp"
+        android:maxLines="1"
+        android:text="@string/app_name"
+        android:textSize="15sp" />
 
     <ImageView
         android:id="@+id/function_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/home"/>
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:src="@mipmap/path" />
 
-    <TextView
-        android:id="@+id/function_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:text="@string/app_name"
-        android:textColor="@color/colorAccent"
-        android:textSize="15sp"
-        />
-
-</LinearLayout>
+    <View
+        android:id="@+id/my_line"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_10"
+        android:visibility="gone"
+        android:background="@color/whitesmoke"
+        android:layout_alignParentBottom="true" />
+</RelativeLayout>
