--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -57,4 +57,16 @@
         <attr name="layout_screenWidthTextSizePercent" format="fraction" />
         <attr name="layout_heightTextSizePercent" format="fraction" />
     </declare-styleable>
+
+    <declare-styleable name="NumControlerView">
+
+        <attr name="value" format="reference|integer"/>
+        <attr name="minValue" format="reference|integer"/>
+        <attr name="maxValue" format="reference|integer"/>
+
+        <attr name="subButtonBackground" format="reference"/>
+        <attr name="addButtonBackground" format="reference"/>
+        <attr name="numTextBackGround" format="reference"/>
+
+    </declare-styleable>
 </resources>
