--- a/app/src/main/res/layout/activity_main_layout.xml
+++ b/app/src/main/res/layout/activity_main_layout.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:id="@+id/main_container"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="match_parent"
         android:background="@android:color/transparent">
-        <!--<View-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0.5dp"-->
-        <!--android:layout_above="@+id/main_tabbar"-->
-        <!--android:background="#f1f1f1"-->
-        <!--/>-->
+
+        <FrameLayout
+            android:id="@+id/main_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_above="@+id/main_tabbar"
+            android:layout_below="@+id/main_container"
+            android:background="#f1f1f1" />
 
         <com.whombang.app.common.view.tabbar.NavigateTabBar xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/main_tabbar"
@@ -32,11 +34,13 @@
             app:navigateTabTextColor="@color/navigate_tabbar_text_normal" />
 
         <ImageView
-            android:id="@+id/tab_call_iv"
+            android:id="@+id/fab_call"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:contentDescription="@null"
-            android:src="@mipmap/navigate_tab_post" />
+            android:layout_marginBottom="5dp"
+            android:src="@mipmap/navigate_tab_call"
+          />
     </RelativeLayout>
 </LinearLayout>
