--- a/app/src/main/res/layout/item_work_func.xml
+++ b/app/src/main/res/layout/item_work_func.xml
@@ -1,44 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:background="@drawable/border_bg">
+    android:layout_height="wrap_content"
+    android:background="@drawable/border_bg"
+    android:orientation="vertical">
+
     <View
         android:id="@+id/my_line_top"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_10"
+        android:layout_alignParentTop="true"
         android:background="@color/whitesmoke"
-        android:visibility="gone"
-        android:layout_alignParentTop="true" />
-    <TextView
-        android:id="@+id/function_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="18dp"
-        android:layout_marginStart="18dp"
-        android:maxLines="1"
-        android:text="@string/app_name"
-        android:textSize="15sp" />
+        android:visibility="gone" />
 
-    <ImageView
-        android:id="@+id/function_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:src="@mipmap/path" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:background="@drawable/border_bg">
+
+        <TextView
+            android:id="@+id/function_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="18dp"
+            android:layout_marginStart="18dp"
+            android:maxLines="1"
+            android:text="@string/app_name"
+            android:textSize="15sp" />
+
+        <ImageView
+            android:id="@+id/function_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:src="@mipmap/path" />
+    </RelativeLayout>
 
     <View
         android:id="@+id/my_line"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_10"
-        android:visibility="gone"
+        android:layout_alignParentBottom="true"
         android:background="@color/whitesmoke"
-        android:layout_alignParentBottom="true" />
-</RelativeLayout>
+        android:visibility="gone" />
+</LinearLayout>
