--- a/app/src/main/res/layout/activity_text_task.xml
+++ b/app/src/main/res/layout/activity_text_task.xml
@@ -1,22 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.whombang.app.features.sendtask.TextTaskActivity">
+    android:background="@color/snow"
+    tools:context="com.whombang.app.features.sendtask.TextTaskActivity"
+    android:orientation="vertical">
+   <include layout="@layout/wb_titlebar_layout"/>
+    <RelativeLayout
+        android:id="@+id/rlt"
+        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/common_titleBar"
+        android:layout_height="200dp">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    </RelativeLayout>
+
+    <EditText
+        android:id="@+id/et_content"
+        android:layout_below="@+id/rlt"
+        android:layout_width="match_parent"
+        android:layout_margin="@dimen/dp_10"
+        android:hint="输入文字"
+        android:background="@drawable/edittext_bg"
+        android:minHeight="200dp"
+        android:text="sdfasdfa"
+        android:gravity="top|left"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="发布文本任务"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</android.support.constraint.ConstraintLayout>
+        android:layout_below="@+id/et_content"
+        android:layout_marginTop="30dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_10"
+        android:background="@drawable/button_bg"
+        android:textColor="@color/white"
+        android:text="确认发送" />
+
+</RelativeLayout>
