--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ec0f38</color>
-    <color name="colorPrimaryDark">#ec0f38</color>
-    <color name="colorAccent">#ec0f38</color>
+    <color name="colorPrimary">#ffffff</color>
+    <color name="colorPrimaryDark">#ffffff</color>
+    <color name="colorAccent">#ffffff</color>
+ <!--<color name="colorPrimary">#ec0f38</color>-->
+    <!--<color name="colorPrimaryDark">#ec0f38</color>-->
+    <!--<color name="colorAccent">#ec0f38</color>-->
 
     <color name="navigate_tabbar_text_normal">#ff333333</color>
     <color name="item_border_color">#666666</color>
     <color name="item_default_color">#22EEEEEE</color>
     <color name="item_pressed_color">#CCCCCC</color>
     <color name="item_activated_color">#77CEEE</color>
-
+    <color name="orange1">#e67f13</color>
     <color name="lineColor">#11333333</color>
     <color name="colorGray">#ccc</color>
+    <color name="bg">#fffafa</color>
 
     <color name="white">#ffffff</color>
     <!-- 白色 -->
