--- a/app/src/main/res/layout/wb_my_evaluate_layout.xml
+++ b/app/src/main/res/layout/wb_my_evaluate_layout.xml
@@ -4,10 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.whombang.app.features.mycenter.activity.ShopOrderActivity">
-
-    <com.whombang.app.common.view.TitleBar
-        android:id="@+id/shop_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    tools:context="com.whombang.app.features.mycenter.activity.MyEvaluateActivity">
+   <include layout="@layout/wb_titlebar_layout"/>
 </LinearLayout>
