--- a/app/src/main/res/layout/wb_address_manage_layout.xml
+++ b/app/src/main/res/layout/wb_address_manage_layout.xml
@@ -3,8 +3,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.whombang.app.common.view.TitleBar
-        android:id="@+id/titleBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <include layout="@layout/wb_titlebar_layout"/>
 </LinearLayout>
