--- a/app/src/main/res/layout/wb_lanucher_layout.xml
+++ b/app/src/main/res/layout/wb_lanucher_layout.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sundy.counect.LanucherActivity">
-
+    >
+    <include layout="@layout/wb_titlebar_layout"
+        android:visibility="gone"
+        />
     <ImageView
         android:id="@+id/img_logo"
         android:layout_width="wrap_content"
