--- a/app/src/main/res/layout/wb_login_layout.xml
+++ b/app/src/main/res/layout/wb_login_layout.xml
@@ -5,8 +5,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.whombang.app.features.login.LoginActivity">
-    <com.whombang.app.common.view.TitleBar
-        android:id="@+id/login_titlebar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+    <include layout="@layout/wb_titlebar_layout"/>
 </LinearLayout>
