--- a/app/src/main/res/layout/wb_main_layout.xml
+++ b/app/src/main/res/layout/wb_main_layout.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+    <include layout="@layout/wb_titlebar_layout"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -23,7 +23,7 @@
             android:layout_below="@+id/main_container"
             android:background="#f1f1f1" />
 
-        <com.whombang.app.common.view.tabbar.NavigateTabBar xmlns:app="http://schemas.android.com/apk/res-auto"
+        <com.whombang.app.common.view.tabbar.NavigateTabBar
             android:id="@+id/main_tabbar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
