--- a/app/src/main/res/layout/wb_my_order_layout.xml
+++ b/app/src/main/res/layout/wb_my_order_layout.xml
@@ -5,8 +5,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.whombang.app.features.mycenter.activity.MyOrderActivity">
-  <com.whombang.app.common.view.TitleBar
-      android:id="@+id/order_titleBar"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"/>
+  <include layout="@layout/wb_titlebar_layout"/>
 </LinearLayout>
