--- a/app/src/main/res/layout/wb_newly_address_layout.xml
+++ b/app/src/main/res/layout/wb_newly_address_layout.xml
@@ -5,5 +5,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.whombang.app.features.mycenter.activity.NewlyAddressActivity">
-
+    <include layout="@layout/wb_titlebar_layout"/>
 </android.support.constraint.ConstraintLayout>
