--- a/app/src/main/res/layout/wb_login_layout.xml
+++ b/app/src/main/res/layout/wb_login_layout.xml
@@ -1,9 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.whombang.app.features.login.LoginActivity">
-    <include layout="@layout/wb_titlebar_layout"/>
-</LinearLayout>
+    <include layout="@layout/wb_titlebar_layout"
+        android:id="@+id/include2" />
+
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="148dp"
+        android:layout_height="148dp"
+        android:layout_below="@+id/include2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="@mipmap/logo" />
+    <RelativeLayout
+        android:id="@+id/indicator"
+        android:layout_below="@+id/logo"
+        android:layout_width="match_parent"
+        android:layout_marginTop="30dp"
+        android:background="@color/oldlace"
+        android:layout_height="50dp">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:gravity="center"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:textSize="18sp"
+            android:layout_marginLeft="98dp"
+            android:layout_marginStart="98dp"
+            android:text="密码登录" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignTop="@+id/textView"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:layout_marginEnd="84dp"
+            android:layout_marginRight="84dp"
+            android:text="验证码登录" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/login_type"
+        android:layout_width="match_parent"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/indicator"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:id="@+id/login_type_one"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tv_code"
+            android:layout_width="60dp"
+            android:gravity="center"
+            android:padding="5dp"
+            android:text="+86"
+            android:layout_height="50dp" />
+         <EditText
+             android:layout_width="match_parent"
+             android:hint="请输入手机号码"
+             android:layout_toRightOf="@+id/tv_code"
+             android:layout_height="50dp" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_below="@+id/tv_code"
+            android:layout_marginTop="10dp"
+            android:hint="请输入密码"
+            android:layout_height="50dp" />
+    </RelativeLayout>
+    </RelativeLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:background="@drawable/button_bg"
+        android:textColor="@color/white"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/login_type"
+        android:layout_marginRight="40dp"
+        android:layout_marginLeft="40dp"
+        android:text="登录"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_login" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/btn_login"
+        android:layout_alignStart="@+id/btn_login"
+        android:layout_below="@+id/btn_login"
+        android:layout_marginTop="19dp"
+        android:text="立即注册" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/btn_login"
+        android:layout_alignRight="@+id/btn_login"
+        android:layout_alignTop="@+id/textView6"
+        android:text="忘记密码？" />
+
+</RelativeLayout>
