--- a/app/src/main/res/layout/wb_login_layout.xml
+++ b/app/src/main/res/layout/wb_login_layout.xml
@@ -97,7 +97,7 @@
         android:id="@+id/btn_login" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/tv_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/btn_login"
@@ -107,12 +107,12 @@
         android:text="立即注册" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tv_forget"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/btn_login"
         android:layout_alignRight="@+id/btn_login"
-        android:layout_alignTop="@+id/textView6"
+        android:layout_alignTop="@+id/tv_register"
         android:text="忘记密码？" />
 
 </RelativeLayout>
